# pomodoro

./: .env  .env.example  .gitignor  .gitignore  Dockerfile.prod  LICENSE  Makefile  README.md  alembic.ini  dependecy.py  docker-compose.prod.yml  docker-compose.yml  main.py  mypy.ini  nginx.conf  pomodoro.sqlite  pyproject.toml  settings.py  structure.txt
alembic/: env.py
alembic/versions/: 2025_10_11_1724-2707399fd4cc_init.py  2025_10_11_1725-17648644f0a8_delete_type_in_tasks.py  2025_10_12_1652-8bd510fd3333_.py  2025_10_22_1149-86c0dd9abc76_init.py  2025_10_25_2044-0e176f10e7be_.py  2025_10_26_1854-c26e7d689500_.py  2025_10_29_1803-8507ba7c5153_.py  2025_11_06_2153-1c096b5095e1_.py  2025_11_06_2225-41064627dc8c_.py  2025_11_07_1607-e6312da1739d_.py  2025_11_08_1930-02832b48f06b_.py  2025_11_08_2134-8b57b1fdaf09_.py  2025_11_10_1934-13e380da0de9_.py  2025_11_10_1944-aef2acd29bac_.py  2025_11_15_1625-c60f0841a9a0_.py  2025_11_15_1912-6bd72c3ccfae_.py  2025_12_26_1732-6842299af126_.py  2025_12_29_0057-0b316de550f0_.py
app/: __init__.py  main.py
app/auth/: form.py  permissions.py  security.py
app/auth/clients/: yandex.py
app/auth/dependencies/: auth.py
app/auth/exceptions/: password_incorrect.py
app/auth/handlers/: __init__.py  auth.py
app/auth/models/: oauth_accaunts.py
app/auth/repositories/: auth.py
app/auth/schemas/: oauth.py  yandex_user.py
app/auth/services/: __init__.py  auth.py  mappers.py
app/core/: __init__.py  settings.py
app/core/exceptions/: ___init__.py  acces_denied.py  integrity.py  object_not_found.py
app/core/handlers/: exceptions_handlers.py
app/core/mixins/: ___init__.py  active_flag.py  timestamp.py
app/core/repositories/: base_crud.py
app/core/services/: base_crud.py
app/core/utils/: normalize.py
app/database/: accesor.py
app/database/cache/: accesor.py
app/task/dependencies/: category.py  task.py
app/task/handlers/: categories.py  tasks.py
app/task/models/: categories.py  tasks.py
app/task/repositories/: cache_tasks.py  category.py  task.py
app/task/schemas/: category.py  task.py
app/task/services/: category_service.py  task_service.py
app/user/: permisiions.py
app/user/dependencies/: user.py
app/user/exceptions/: user_not_found.py
app/user/handlers/: users.py
app/user/models/: users.py
app/user/repositories/: user.py
app/user/schemas/: user.py
app/user/services/: user_service.py
auth/: __init__.py  permissions.py  security.py
cache/: __init__.py  accesor.py
custom_exceptions/: __init__.py  acces_denied.py  base.py  handlers.py  integrity.py  object_not_found.py
database/: __init__.py  accesor.py  database.py  models.py
database/cache/: __init__.py  accesor.py
dependencies/: __init__.py  auth.py  category.py  task.py  user.py
exceptions/: __init__.py  acces_denied.py  object_not_found.py  password_incorrect.py  user_not_found.py
forms/: auth.py
handlers/: __init__.py  categories.py  tasks.py  users.py
mixins/: __init__.py  active_flag.py  timestamp.py
models/: __init__.py  categories.py  tasks.py  users.py
pomodoro/: __init__.py  main.py
pomodoro/auth/: __init__.py  form.py  permissions.py  security.py
pomodoro/auth/clients/: __init__.py  yandex.py
pomodoro/auth/dependencies/: __init__.py  auth.py
pomodoro/auth/exceptions/: __init__.py  password_incorrect.py
pomodoro/auth/handlers/: __init__.py  auth.py
pomodoro/auth/models/: __init__.py  oauth_accaunts.py
pomodoro/auth/repositories/: __init__.py  auth.py
pomodoro/auth/schemas/: __init__.py  oauth.py  yandex_user.py
pomodoro/auth/services/: __init__.py  auth.py  mappers.py
pomodoro/core/: __init__.py  settings.py
pomodoro/core/dependencies/: __init__.py  core.py
pomodoro/core/email/: __init__.py  clients.py  service.py  templates.py
pomodoro/core/exceptions/: ___init__.py  acces_denied.py  base.py  conflicts.py  file.py  integrity.py  invalid_reset_token.py  object_not_found.py  validation.py
pomodoro/core/handlers/: __init__.py  exceptions_handlers.py
pomodoro/core/mixins/: ___init__.py  active_flag.py  timestamp.py
pomodoro/core/repositories/: __init__.py  base_crud.py
pomodoro/core/security/: __init__.py  password_policy.py
pomodoro/core/services/: base_crud.py
pomodoro/core/utils/: __init__.py  db_constraints.py  normalize.py
pomodoro/core/validators/: __init__.py  password.py
pomodoro/database/: __init__.py  accesor.py  database.py
pomodoro/database/cache/: __init__.py  accesor.py
pomodoro/media/: __init__.py
pomodoro/media/clients/: __init__.py  (+1 more)
pomodoro/task/: __init__.py
pomodoro/user/: __init__.py  permisiions.py
repositories/: __init__.py  base_crud.py  cache_tasks.py  category.py  crud.py  task.py  user.py
repository/: cache_tasks.py  category.py  task.py
schemas/: Category.py  Task.py  __init__.py  category.py  task.py  user.py
scripts/: create_root.py  e2e.py  e2e_report.json
services/: __init__.py  base_crud.py  category_service.py  crud.py  integrity_exception_service.py  task_service.py  user_service.py
utils/: __init__.py  db_constraints.py
(+58 files in other folders)
